--- a/paginas/bebes.html
+++ b/paginas/bebes.html
@@ -17,6 +17,32 @@
     .font-family-base {
       font-family: inherit !important;
     }
+
+    .video-wrapper {
+    width: 100%;
+    max-width: 500px;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    overflow: hidden;
+    border-radius: 1rem;               /* rounded-2xl aprox. */
+    display: block;
+    box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1), 0 4px 6px -4px rgba(0,0,0,0.1); /* shadow-lg */
+    transition: box-shadow .3s ease;   /* transition-shadow duration-300 */
+  }
+
+  .video-wrapper:hover {
+    box-shadow: 0 25px 50px -12px rgba(0,0,0,0.25); /* hover:shadow-2xl */
+  }
+
+  /* Aseguramos que el video ocupe TODO el wrapper y recorte correctamente */
+  .video-wrapper video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;  /* ya lo tenías, pero por las dudas lo forzamos */
+    display: block;
+  }
+
   </style>
 </head>
 
@@ -232,19 +258,15 @@
         <div class="flex flex-col lg:flex-row items-center justify-between gap-10">
 
         <div class="w-full lg:w-[48%] flex justify-center items-center">
-          <a href="https://www.pamperslatam.com/" target="_blank" rel="noopener noreferrer" class="w-full max-w-[500px] h-[350px] mx-auto overflow-hidden rounded-2xl block shadow-lg hover:shadow-2xl transition-shadow duration-300">
-            <video
-              class="w-full h-full object-cover"
-              autoplay
-              muted
-              loop
-              playsinline
-            >
+          <a href="https://www.pamperslatam.com/" target="_blank" rel="noopener noreferrer"
+            class="video-wrapper">
+            <video autoplay muted loop playsinline>
               <source src="../img/pampers2.mp4" type="video/mp4">
               Tu navegador no soporta el video.
             </video>
           </a>
         </div>
+
 
         <div class="relative w-full lg:w-1/2">
           <div class="relative overflow-hidden">
@@ -254,7 +276,6 @@
           </div>
         </div>
       </div>
-      </div>
     
       <div id="grilla-bebes-2"
            class="flex flex-wrap justify-center gap-8 py-12">
@@ -262,19 +283,15 @@
       
       <div class="flex flex-col lg:flex-row items-center justify-between gap-10">
         <div class="w-full lg:w-[48%] flex justify-center items-center">
-          <a href="https://tiendanutriciabago.com.ar/" target="_blank" rel="noopener noreferrer" class="w-full max-w-[500px] h-[350px] mx-auto overflow-hidden rounded-2xl block shadow-lg hover:shadow-2xl transition-shadow duration-300">
-            <video
-              class="w-full h-full object-cover"
-              autoplay
-              muted
-              loop
-              playsinline
-            >
+          <a href="https://tiendanutriciabago.com.ar/" target="_blank" rel="noopener noreferrer"
+            class="video-wrapper">
+            <video autoplay muted loop playsinline>
               <source src="../assets/img/Nutrilon 4.mp4" type="video/mp4">
               Tu navegador no soporta el video.
             </video>
           </a>
         </div>
+
 
         <div class="relative w-full lg:w-1/2">
           <div class="relative overflow-hidden">
